Game library and history functionality

--- a/frontend/src/app/userpage/userpage.component.html
+++ b/frontend/src/app/userpage/userpage.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf = "loggedIn">
+<div class="container" *ngIf = "auth.user$ | async as user">
   <div class="row">
     <div class="col-12">
       <div class="card m-3">
