--- a/frontend/src/app/results/results.component.html
+++ b/frontend/src/app/results/results.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-6">
         <div class="m-3">
             <h2 class="">Why this game?</h2>
-            <p class="">Reasoning goes down here u silly Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quidem omnis ipsa tenetur, enim neque, similique officia totam soluta illo quia porro tempora illum culpa. Aspernatur eum similique provident consequatur.</p>
+            <div [innerHTML]="reasoning"></div>
         </div>
         <div class="text-center">
             <a class="btn btn-lg btn-primary mb-3" href="{{resultData.moby_url}}">More info</a>
