--- a/frontend/src/app/history/history.component.html
+++ b/frontend/src/app/history/history.component.html
@@ -1,27 +1,30 @@
-<div class="card m-4 w-100" style="min-width: 50vw;">
+<div class="card m-4 itemTable">
     <h1 class="card-header p-3 h2">
         Recommendation History
     </h1>
     <div class="card-body p-3">
-        <table class="table align-middle m-2">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Title</th>
-                <th scope="col">ID</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-                <ng-container *ngFor="let item of items; index as i">
-                    <tr>
-                        <td>{{i + 1}}</td>
-                        <td>{{item.title}}</td>
-                        <td>{{item._id}}</td>
-                        <td><a href="{{item.moby_url}}" class="btn btn-primary">More info</a></td>
-                    </tr>
-                </ng-container>
-            </tbody>
-        </table>
+        <div class="table-responsive-md">
+            <table class="table align-middle m-2">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <ng-container *ngFor="let item of items; index as i">
+                        <tr>
+                            <td>{{i + 1}}</td>
+                            <td>{{item.title}}</td>
+                            <td>{{item._id}}</td>
+                            <td><a href="{{item.moby_url}}" class="btn btn-primary">More info</a></td>
+                        </tr>
+                    </ng-container>
+                </tbody>
+            </table>
+        </div>
+        
     </div>
 </div>
