--- a/frontend/src/app/results/results.component.html
+++ b/frontend/src/app/results/results.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="row">
-    <div class="col-12 text-center">
+    <div class="col-12">
         <div class="card m-5">
             <h1 class="card-header">{{resultData.title}}</h1>
             <p class="card-body" [innerHTML]="description"></p>
